--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     </head>
     <body>
         <main>
-
+            <h1>Telephone Number Validator</h1>
+            <section id="phone-section">
+                <div id="phone-container">
+                    <div id="camera"></div>
+                    <div id="screen">
+                        <label for="user-input" id="user-label">Enter a Phone Number:</label>
+                        <input type="number" id="user-input">
+                        <div id="results-div"></div>
+                    </div>
+                    <div id="btn-container">
+                        <button type="button" id="check-btn" class="btn">Check</button>
+                        <button type="button" id="clear-btn" class="btn">Clear</button>
+                    </div>
+                </div>
+            </section>
         </main>
     <script src="script.js"></script>
     </body>
