--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <div id="camera"></div>
                     <div id="screen">
                         <label for="user-input" id="user-label">Enter a Phone Number:</label>
-                        <input type="number" id="user-input">
+                        <input type="text" id="user-input">
                         <div id="results-div"></div>
                     </div>
                     <div id="btn-container">
